@@ -46,6 +46,10 @@ tasks.named('test') {
 	finalizedBy jacocoTestReport
 }
 
+tasks.withType(Test).configureEach {
+	jvmArgs '-Djdk.attach.allowAttachSelf=true', '-XX:+EnableDynamicAgentLoading'
+}
+
 test {
 	filter {
 		excludeTestsMatching("*IT")
